# esp-face

./: .gitignore  CMakeLists.txt  Makefile  README.md
head_pose_estimation/: README.md  hpe_forward.cpp
head_pose_estimation/include/: hpe_forward.h
image_util/: image_util.c
image_util/include/: esp_image.hpp  image_util.h
include/dl/: dl_constant.hpp  dl_define.hpp  dl_image.hpp  dl_layer_base.hpp  dl_layer_concat2d.hpp  dl_layer_conv2d.hpp  dl_layer_depthwise_conv2d.hpp  dl_layer_model.hpp  dl_nn_concat2d.hpp  dl_nn_conv2d.hpp  dl_nn_depthwise_conv2d.hpp  dl_tool.hpp  dl_variable.hpp
include/model/: cat_face_detector.hpp  detector.hpp  human_face_detector.hpp
lib/esp32s3/: README.md
lib/include/: fsa.h
tutorial/: README.md  sdkconfig.defaults
tutorial/main/: CMakeLists.txt  app_main.cpp
tutorial/model/: mnist_coefficient.cpp  mnist_coefficient.hpp  mnist_model.hpp
tutorial/model/npy/: config.json
